--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev": "nodemon"
   },
   "devDependencies": {
+    "@types/amqplib": "^0.8.1",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^16.4.13",
@@ -23,6 +24,7 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
+    "amqplib": "^0.8.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "pm2": "^5.1.0"
