--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "tsc",
     "start": "tsc && node build/index.js",
+    "serve": "pm2-runtime build/index.js",
     "dev": "nodemon src/index.ts"
   },
   "devDependencies": {
@@ -20,10 +21,10 @@
     "eslint-plugin-prettier": "^3.4.0",
     "nodemon": "^2.0.12",
     "prettier": "^2.3.2",
-    "ts-node": "^10.1.0",
-    "typescript": "^4.3.5"
+    "ts-node": "^10.1.0"
   },
   "dependencies": {
+    "typescript": "^4.3.5",
     "amqplib": "^0.8.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
