--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,6 +14,8 @@ services:
     environment:
       - RABBITMQ_DEFAULT_USER=admin
       - RABBITMQ_DEFAULT_PASS=admin
+    healthcheck:
+        test: "exit 0"
 
   nodejs-server:
     build: server
@@ -23,6 +25,10 @@ services:
       - "3333:3333"
     volumes:
       - ./server:/opt/nodejs-rabbitmq
+    depends_on: 
+      - rabbitmq
+    links: 
+      - rabbitmq
 
   nodejs-client0:
     build: client
@@ -36,7 +42,11 @@ services:
       - PORT=3000
       - HOSTNAME=client0
     depends_on: 
+      rabbitmq:
+        condition: service_healthy
+    links: 
       - rabbitmq
+    
 
   nodejs-client1:
     build: client
@@ -50,6 +60,9 @@ services:
       - PORT=3001
       - HOSTNAME=client1
     depends_on: 
+      rabbitmq:
+        condition: service_healthy
+    links: 
       - rabbitmq
 
   nodejs-client2:
@@ -64,4 +77,7 @@ services:
       - PORT=3002
       - HOSTNAME=client2
     depends_on: 
+      rabbitmq:
+        condition: service_healthy
+    links: 
       - rabbitmq
